<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weather_forecast.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_alert"
            app:destination="@id/nav_alert" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.weather_forecast.search.view.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
    android:id="@+id/nav_settings"
    android:name="com.example.weather_forecast.settings.view.SettingsFragment"
    android:label="@string/menu_favorite"
    tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weather_forecast.alert.view.WeatherAlertFragment"
        android:label="@string/weather_alerts"
        tools:layout="@layout/fragment_weather_alert"/>
</navigation>
